% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/sfsmisc/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{sfsmisc}}
\encoding{UTF-8}

%%% TODO:
      %% \item New \code{rDatetime()} for random date/time sequences
      %% within a specified time range.
\section{CHANGES in sfsmisc VERSION 1.1-14 [2022-09-17]}{
  \subsection{Tweaks}{
    \itemize{
      \item \code{eaxis()} has a larger default, \code{12} instead of 10,
      for \code{nintLog}.

      \item \file{man/*.Rd}: remove some extraneous \code{\\}.

      \item \code{TA.plot()} now works also with NA residuals.

      \item use new internal \code{struct()} as fast substitute of
      \code{structure()}.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-13 [2022-04-02]}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{relErrV(target, current)} now keeps \code{dim()} and
      \code{dimnames()} e.g., when \code{current} is an mpfr-array and
      \code{names()} when present.
    }
  }
  \subsection{Tweaks}{
    \itemize{
      \item No longer import from \pkg{methods}: no need for a while already.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-12 [2021-09-10]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item new \code{helppdf(topic)} mostly for interactive use.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{shortRversion()} \emph{still} failed with \code{"RC"}.

      \item \code{relErrV(x1, x2)} now works when both objects are of
      length zero, but no longer when only one of them is.
    }
  }
  %% \subsection{DEPRECATED & DEFUNCT}{
  %%   \itemize{
  %%     \item
  %%   }
  %% }
}

\section{CHANGES in sfsmisc VERSION 1.1-11 [2021-04-03]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{sessionInfoX(TRUE)} now choose chooses \emph{all} loaded
      packages (which were accidentally chosen since 1.1-9, see the bug fixes).
    }
  }
  \subsection{BUG FIXES}{
    \itemize{